*** fix: remove unused import, func